e2e: run specs in parallel (#2375)

--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -2,11 +2,6 @@ name: Build x86 Image
 
 on:
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - labeled
     branches:
     - master
     - release-*
@@ -167,7 +162,11 @@ jobs:
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
-      - run: make e2e-compile
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
+
+      - run: make e2e-build
         working-directory: ${{ env.E2E_DIR }}
 
   k8s-conformance-e2e:
@@ -236,6 +235,10 @@ jobs:
         uses: helm/kind-action@v1
         with:
           install_only: true
+
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -329,6 +332,10 @@ jobs:
         with:
           install_only: true
 
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
+
       - name: Download image
         uses: actions/download-artifact@v3
         with:
@@ -392,6 +399,10 @@ jobs:
         uses: helm/kind-action@v1
         with:
           install_only: true
+
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -475,6 +486,10 @@ jobs:
         with:
           install_only: true
 
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
+
       - name: Download image
         uses: actions/download-artifact@v3
         with:
@@ -552,6 +567,10 @@ jobs:
         uses: helm/kind-action@v1
         with:
           install_only: true
+
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -815,6 +834,10 @@ jobs:
         with:
           install_only: true
 
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
+
       - name: Download image
         uses: actions/download-artifact@v3
         with:
@@ -905,6 +928,10 @@ jobs:
         uses: helm/kind-action@v1
         with:
           install_only: true
+
+      - name: Install ginkgo
+        working-directory: ${{ env.E2E_DIR }}
+        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
         uses: actions/download-artifact@v3
