ci: fix path filter for windows build

--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -60,6 +60,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
+          base: ${{ github.base_ref || github.ref_name }}
           filters: .github/path-filters.yaml
 
   build-ovs-and-ovn:
