ci: fix path filter for windows build (#2378)

--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -61,7 +61,9 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
+          base: ${{ github.base_ref || github.ref_name }}
           filters: .github/path-filters.yaml
+          list-files: csv
 
   build-ovs-and-ovn:
     name: Build OVS and OVN
