--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -54,7 +54,7 @@ jobs:
           EOF
 
           sh hack/go-list.sh cmd/windows | while read f; do
-            echo "- '$f'" >> $filter
+            echo "- '$f'" | tee -a $filter
           done
 
       - uses: dorny/paths-filter@v2
