--- a/kubeovn-helm/templates/ovncni-ds.yaml
+++ b/kubeovn-helm/templates/ovncni-ds.yaml
@@ -160,7 +160,7 @@ spec:
             path: /lib/modules
         - name: shared-dir
           hostPath:
-            path: /var/lib/kubelet/pods
+            path: {{ .Values.kubelet_conf.KUBELET_DIR }}/pods
         - name: systemid
           hostPath:
             path: /etc/origin/openvswitch
