test lb svc e2e for release 1.11

--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -683,6 +683,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.11
     steps:
       - uses: actions/checkout@v3
 
