--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -1072,7 +1072,8 @@ jobs:
       - name: Install submariner subctl
         run: |
           curl -Ls https://get.submariner.io | bash
-          mv ~/.local/bin/subctl /usr/bin/
+          sudo chmod +x ~/.local/bin/subctl
+          sudo mv ~/.local/bin/subctl /usr/bin/
 
       - name: Create kind cluster
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
