--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -1346,4 +1346,8 @@ jobs:
         working-directory: ${{ env.E2E_DIR }}
         env:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
+          KUBECONFIG: ~/.kube/config
         run: make kube-ovn-submariner-conformance-e2e
+
+      - name: Cleanup
+        run: sh dist/images/cleanup.sh
