--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -1320,6 +1320,8 @@ jobs:
           sudo PATH=~/.local/bin:$PATH make kind-init-ovn-submariner
           sudo cp -r /root/.kube/ ~/.kube/
           sudo chown -R $(id -un). ~/.kube/
+          sudo tree /root
+          sudo tree ~/.kube/
 
       - name: Install Kube-OVN
         run: make kind-install-ovn-submariner
