--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -99,6 +99,12 @@ kube-ovn-ic-conformance-e2e:
 
 .PHONY: kube-ovn-submariner-conformance-e2e
 kube-ovn-submariner-conformance-e2e:
+	while ! kubectl wait pod --for=condition=Ready -l app=submariner-routeagent -n submariner-operator && \
+	      ! kubectl wait pod --for=condition=Ready -l app=submariner-gateway -n submariner-operator && \
+	      ! kubectl wait pod --for=condition=Ready -l app=submariner-lighthouse-agent -n submariner-operator && \
+	      ! kubectl wait pod --for=condition=Ready -l app=submariner-lighthouse-coredns -n submariner-operator ; do \
+		sleep 3; \
+	done
 	subctl verify --kubecontexts kind-kube-ovn,kind-kube-ovn1 --verbose --disruptive-tests --kubeconfig ~/.kube/config
 
 .PHONY: kube-ovn-lb-svc-conformance-e2e
