--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -1320,8 +1320,25 @@ jobs:
           sudo PATH=~/.local/bin:$PATH make kind-init-ovn-submariner
           sudo cp -r /root/.kube/ ~/.kube/
           sudo chown -R $(id -un). ~/.kube/
-          sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
-          sudo update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+
+      - name: Change kind node iptables to legacy
+        run: |
+          docker exec -it kube-ovn-control-plane update-alternatives --set iptables /usr/sbin/iptables-legacy
+          docker exec -it kube-ovn-worker update-alternatives --set iptables /usr/sbin/iptables-legacy
+          docker exec -it kube-ovn-worker2 update-alternatives --set iptables /usr/sbin/iptables-legacy
+          docker exec -it kube-ovn1-control-plane update-alternatives --set iptables /usr/sbin/iptables-legacy
+          docker exec -it kube-ovn1-worker update-alternatives --set iptables /usr/sbin/iptables-legacy
+          docker exec -it kube-ovn1-worker2 update-alternatives --set iptables /usr/sbin/iptables-legacy
+
+          docker exec -it kube-ovn-control-plane update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+          docker exec -it kube-ovn-worker update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+          docker exec -it kube-ovn-worker2 update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+          docker exec -it kube-ovn1-control-plane update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+          docker exec -it kube-ovn1-worker update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+          docker exec -it kube-ovn1-worker2 update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
+
+          docker exec -it kube-ovn1-worker2 iptables -V
+          docker exec -it kube-ovn-worker2 iptables -V
 
       - name: Install Kube-OVN
         run: make kind-install-ovn-submariner
