--- a/kubeovn-helm/templates/ovsovn-ds.yaml
+++ b/kubeovn-helm/templates/ovsovn-ds.yaml
@@ -12,7 +12,10 @@ spec:
     matchLabels:
       app: ovs
   updateStrategy:
-    type: OnDelete
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
@@ -48,6 +51,14 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIP
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             - name: HW_OFFLOAD
               value: "{{- .Values.func.HW_OFFLOAD }}"
             - name: TUNNEL_TYPE
