--- a/yamls/ovn.yaml
+++ b/yamls/ovn.yaml
@@ -356,7 +356,7 @@ spec:
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 1
+      maxSurge: 100%
       maxUnavailable: 0
   template:
     metadata:
